issue#5: Button Align

--- a/style.css
+++ b/style.css
@@ -89,9 +89,10 @@ button:focus-visible {
 }
 
 @media screen and (min-width: 320px){
-  .btns{
-    transform: translateX(50px)
-  }
+  .nav__container{
+    border: 2px  solid white;
+    border-radius: 8px;
+}
 
   .title__container{
     position: absolute;
